// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Supplier component inside index file renders the create supplier component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Supplier />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Loader />,
      "className": "loader-parent-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Loader />,
        "className": "loader-parent-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`render Supplier component inside index file should render the Supplier Details 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Supplier />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <ForwardRef>
        <div>
          <SupplierDetails
            editSupplierData={
              Object {
                "companiesHouseName": "Test Companies House Name",
                "companyRegistrationNumber": "Test 123456",
                "supplierName": "Test Supplier Name",
                "vatNumber": "Test 09876",
              }
            }
            handleEditSupplierDetails={[Function]}
            supplierData={
              Array [
                "supplierName",
                "companiesHouseName",
                "companyRegistrationNumber",
                "vatNumber",
              ]
            }
          />
        </div>
      </ForwardRef>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <div>
          <SupplierDetails
            editSupplierData={
              Object {
                "companiesHouseName": "Test Companies House Name",
                "companyRegistrationNumber": "Test 123456",
                "supplierName": "Test Supplier Name",
                "vatNumber": "Test 09876",
              }
            }
            handleEditSupplierDetails={[Function]}
            supplierData={
              Array [
                "supplierName",
                "companiesHouseName",
                "companyRegistrationNumber",
                "vatNumber",
              ]
            }
          />
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <SupplierDetails
              editSupplierData={
                Object {
                  "companiesHouseName": "Test Companies House Name",
                  "companyRegistrationNumber": "Test 123456",
                  "supplierName": "Test Supplier Name",
                  "vatNumber": "Test 09876",
                }
              }
              handleEditSupplierDetails={[Function]}
              supplierData={
                Array [
                  "supplierName",
                  "companiesHouseName",
                  "companyRegistrationNumber",
                  "vatNumber",
                ]
              }
            />,
            null,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "editSupplierData": Object {
                "companiesHouseName": "Test Companies House Name",
                "companyRegistrationNumber": "Test 123456",
                "supplierName": "Test Supplier Name",
                "vatNumber": "Test 09876",
              },
              "handleEditSupplierDetails": [Function],
              "supplierData": Array [
                "supplierName",
                "companiesHouseName",
                "companyRegistrationNumber",
                "vatNumber",
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": "div",
      },
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-htoDjs",
          "isStatic": true,
          "rules": Array [
            "
    margin: 20px 0px;
    display: inline-block;
    width: 100%;
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-htoDjs",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-EHOje",
        "isStatic": true,
        "rules": Array [
          "
    margin: 0 auto;
    @media (max-width: 1259px){
        width: 100%;
    }
    @media (min-width: 1260px) {
        width: 1260px;
    }
    @media (min-width: 1512px){
        width: 1512px;
    }
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-EHOje",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <ForwardRef>
          <div>
            <SupplierDetails
              editSupplierData={
                Object {
                  "companiesHouseName": "Test Companies House Name",
                  "companyRegistrationNumber": "Test 123456",
                  "supplierName": "Test Supplier Name",
                  "vatNumber": "Test 09876",
                }
              }
              handleEditSupplierDetails={[Function]}
              supplierData={
                Array [
                  "supplierName",
                  "companiesHouseName",
                  "companyRegistrationNumber",
                  "vatNumber",
                ]
              }
            />
          </div>
        </ForwardRef>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <div>
            <SupplierDetails
              editSupplierData={
                Object {
                  "companiesHouseName": "Test Companies House Name",
                  "companyRegistrationNumber": "Test 123456",
                  "supplierName": "Test Supplier Name",
                  "vatNumber": "Test 09876",
                }
              }
              handleEditSupplierDetails={[Function]}
              supplierData={
                Array [
                  "supplierName",
                  "companiesHouseName",
                  "companyRegistrationNumber",
                  "vatNumber",
                ]
              }
            />
          </div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <SupplierDetails
                editSupplierData={
                  Object {
                    "companiesHouseName": "Test Companies House Name",
                    "companyRegistrationNumber": "Test 123456",
                    "supplierName": "Test Supplier Name",
                    "vatNumber": "Test 09876",
                  }
                }
                handleEditSupplierDetails={[Function]}
                supplierData={
                  Array [
                    "supplierName",
                    "companiesHouseName",
                    "companyRegistrationNumber",
                    "vatNumber",
                  ]
                }
              />,
              null,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "editSupplierData": Object {
                  "companiesHouseName": "Test Companies House Name",
                  "companyRegistrationNumber": "Test 123456",
                  "supplierName": "Test Supplier Name",
                  "vatNumber": "Test 09876",
                },
                "handleEditSupplierDetails": [Function],
                "supplierData": Array [
                  "supplierName",
                  "companiesHouseName",
                  "companyRegistrationNumber",
                  "vatNumber",
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
          ],
          "type": "div",
        },
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-htoDjs",
            "isStatic": true,
            "rules": Array [
              "
    margin: 20px 0px;
    display: inline-block;
    width: 100%;
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-htoDjs",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-EHOje",
          "isStatic": true,
          "rules": Array [
            "
    margin: 0 auto;
    @media (max-width: 1259px){
        width: 100%;
    }
    @media (min-width: 1260px) {
        width: 1260px;
    }
    @media (min-width: 1512px){
        width: 1512px;
    }
",
          ],
        },
        "displayName": "styled.div",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-EHOje",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`render Supplier component inside index file should render the supplier details with default prop 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Supplier
    id="4567"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Loader />,
      "className": "loader-parent-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Loader />,
        "className": "loader-parent-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
